Wire up upload center
